030-software/fluxcd/apps/restfox/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restfox
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: restfox
  template:
    metadata:
      labels:
        app: restfox
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: "kubernetes.io/hostname"
                labelSelector:
                  matchLabels:
                    app: restfox
      automountServiceAccountToken: false
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: restfox
      containers:
        - name: restfox
          image: flawiddsouza/restfox:0.40.0
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 4004
              name: http
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 128Mi
          volumeMounts:
            - name: data
              mountPath: /home/node
      volumes:
        - name: data
          emptyDir: {}
