030-software/fluxcd/apps/restfox/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: restfox
spec:
  selector:
    app: restfox
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
