030-software/fluxcd/apps/restfox/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: restfox
  annotations:
    dashboard.${domain}/name: restfox
    dashboard.${domain}/url: https://restfox.${domain}
    dashboard.${domain}/icon: api
spec:
  hostnames:
  - restfox.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: restfox
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
